--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular2-froala-wysiwyg": "^2.6.0",
+    "angular2-infinite-scroll": "^0.3.5",
+    "angular2-virtual-scroll": "^0.1.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "ts-md5": "^1.2.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
